# inventree-part-tiles

./: .gitignore  LICENSE  README.md  pyproject.toml
tile_view_plugin/: __init__.py  tile_view.py
tile_view_plugin/static/: tile_panel.js
tile_view_plugin/templates/: tile_template.html
